--- a/src/App.css
+++ b/src/App.css
@@ -21,7 +21,7 @@
 .logo {
   text-decoration: none;
   font-size: 20px;
-  color: #bd8b72;
+  color: #986903;
   text-transform: uppercase;
   align-items: center;
 }
@@ -31,5 +31,57 @@
   gap: 3rem;
   align-items: center;
 }
+
+.page-title{
+  color: #bd8b72;
+  text-transform: uppercase;
+  font-size: 18px;
+}
+
+.form-box {
+  max-width: 600px;
+  margin: auto;
+  width: 100%;
+  display: grid;
+  row-gap: 16px;
+  padding-bottom: 100px;
+}
+
+.form-box input,
+.form-box textarea,
+.form-box select {
+  border: none;
+  outline: none;
+  font-size: 14px;
+  background-color: #e3d5bb;
+  padding: 15px;
+  border-radius: 4px;
+}
+
+.form-box textarea {
+  width: 100%;
+  height: 200px;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  font-family: Arial, sans-serif;
+}
+
+.form-box button {
+  font-weight: 400;
+  text-transform: uppercase;
+  padding: 5px;
+  color: #000000;
+  background-color: #bd8b72;;
+  cursor: pointer;
+  border: none;
+  border-radius: 4px;
+}
+
+.form-box button:hover {
+  background-color: #fadba5;
+  color: #352525;
+}
+
 
 
