Added function to edit button enabling the editing of the quotes. Reworked on AddQuote by taking out the form from it and separating it into individual component, so I was able to reuse this component in editQuote.

--- a/src/App.css
+++ b/src/App.css
@@ -5,8 +5,15 @@
   text-align: center;
 }
 
-.Outer-header{
+.outer-header{
   background-color: #e3d5bb;
+}
+
+.spinner-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
 }
 
 .header{
@@ -164,8 +171,8 @@
 
 .single-quote-author{
  font-weight: 500;
-
 }
+
 
 
 
